Fixed small styling issue where productImage was too big in desktop mode

--- a/src/Components/FullscreenImage/FullscreenImage.module.scss
+++ b/src/Components/FullscreenImage/FullscreenImage.module.scss
@@ -15,6 +15,7 @@
       padding: 10px;
       font-size: 30px;
       color: #333;
+      cursor: pointer;
     }
   }
 
@@ -26,7 +27,7 @@
     align-items: center;
 
     .productImage {
-      width: 100%;
+      max-width: 100%;
     }
   }
 }
